# infected

./: .gitignore  .venv  LICENSE  LICENSE.txt  Makefile  README.md  pyproject.toml
src/infected/: __about__.py  main.py
src/infected/modules/: __init__.py
src/infected/modules/datamodel/: map.py
